--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!--Image-->
 
             <div class="content">
-                <img src="" alt="">
+                <img src="image/shoepalace.jpg" alt="shoe kingdom">
                 <h1>Shoe <br/> Palace</h1>
             </div>
         </form>
