--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
             </div>
 
             <input type="submit" value="submit" class="submit">
-            <p class="already">Already have an account? <a href="#">Login</a></p>
+            <p class="already">Already have an account? <a href="login.html">Login</a></p>
            
             
             <!--Image-->
 
             <div class="content">
                 <img src="image/shoepalace.jpg" alt="shoe kingdom">
-                <h1>Shoe <br/> Palace</h1>
             </div>
         </form>
     </section>
 
+    <script src="app.js"></script>
 </body>
 </html>
